--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,10 @@
 h1 {
     color: red;
+    text-align: center;
+}
+form {
+    text-align: center;
+}
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
