--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>CISC108 Weather App</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'main.css') }}" />
+        <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}"/>
     </head>
     <body>
         <h1>Hi there</h1>
