feat: add all background images

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}"/>
     </head>
     <body>
+    <img id="background" src="{{ url_for('static', filename = background) }}" />
         <h1>Weather Clothing Project</h1>
         <form action="/" method="POST">
             <label>
