--- a/static/main.css
+++ b/static/main.css
@@ -1,9 +1,25 @@
+#background {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: fixed;
+    z-index: -1;
+}
+
 h1 {
     text-align: center;
 }
+
 form {
     text-align: center;
 }
+
+html {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
