--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'main.css') }}" />
         <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}"/>
     </head>
-    <body>
+    <body style="{{ visibility }}">
     <img id="background" src="{{ url_for('static', filename = background) }}" />
         <h1>Weather Clothing Project</h1>
         <form action="/" method="POST">
