--- a/templates/index.html
+++ b/templates/index.html
@@ -4,23 +4,27 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'main.css') }}" />
         <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}"/>
     </head>
-    <body style="{{ visibility }}">
+    <body>
     <img id="background" src="{{ url_for('static', filename = background) }}" />
-        <h1>Weather Clothing Project</h1>
-        <form action="/" method="POST">
-            <label>
-                Location:
-                <input type="text" name="location" />
-            </label>
-            <label>
-                Submit
-                <input type="submit" value="submit" />
-            </label>
+        <div id="heading">
+            <h1>Weather Clothing Project</h1>
+            <form action="/" method="POST">
+                <label>
+                    Location:
+                    <input type="text" name="location" />
+                </label>
+                <label>
+                    Submit
+                    <input type="submit" value="submit" />
+                </label>
+            </form>
+        </div>
+        <div id="clothing-container">
             {% for key, clothing in form_data.items() %}
                 {% for clothes in clothing %}
                     <h2>{{clothes}}</h2>
                 {% endfor %}
             {% endfor %}
-        </form>
+        </div>
     </body>
 </html>
